--- a/slides/07-ctable/ctable.Rmd
+++ b/slides/07-ctable/ctable.Rmd
@@ -42,7 +42,7 @@ This kind of data is conveniently presented as a $2 \times 2$ contingency table.
 
 - The usual Pearson $X^2$ test compares the test statistic
 $$
-\sum_{i, j} \frac{(y_{ij} - \widehat \mu_{ij})^2}{\widehat \mu_{ij}},
+X^2 = \sum_{i, j} \frac{(y_{ij} - \widehat \mu_{ij})^2}{\widehat \mu_{ij}},
 $$
 where
 $$
@@ -57,7 +57,7 @@ summary(ytable)
 
 ### Poisson model
 
-- We observe the manufacturing process for a certain period of time and observe 450 wafers. The data are then cross-classified.
+- We observe the manufacturing process for a certain period of time and observe 450 wafers. The data are then cross-classified. We model the observed counts by Poisson.
 
 ```{r}
 library(gtsummary)
@@ -76,13 +76,13 @@ glm(y ~ particle + quality, family = poisson, data = wafer) %>%
 
 - If we assume the total sample size is fixed at $n=450$. Then we can model the counts by a multinomial model. We consdier two models  
 
-    - $H_1$: one full/saturated model where each cell of the $2 \times 2$ has it's own probability $p_{ij}$, and 
+    - $H_1$: one full/saturated model where each cell of the $2 \times 2$ has its own probability $p_{ij}$, and 
     
     - $H_0$: one reduced model that assumes `particle` is independent of `quality`, thus $p_{ij} = p_i p_j$. 
     
 - For the full/saturated model $H_1$, the multinomial likelihood is
 $$
-\frac{n!}{\prod_i \prod_j y_{ij}} \prod_i \prod_j p_{ij}^{y_{ij}}.
+\frac{n!}{\prod_i \prod_j y_{ij}!} \prod_i \prod_j p_{ij}^{y_{ij}}.
 $$
 We estimate $p_{ij}$ by the cell proportion (MLE)
 $$
@@ -91,7 +91,7 @@ $$
 
 - For the reduced model assuming independence $H_0$, the multinomial likelihood is
 $$
-\frac{n!}{\prod_i \prod_j y_{ij}} \prod_i \prod_j (p_i p_j)^{y_{ij}} = \frac{n!}{\prod_i \prod_j y_{ij}} p_i^{\sum_j y_{ij}} p_j^{\sum_i y_{ij}}.
+\frac{n!}{\prod_i \prod_j y_{ij}!} \prod_i \prod_j (p_i p_j)^{y_{ij}} = \frac{n!}{\prod_i \prod_j y_{ij}!} p_i^{\sum_j y_{ij}} p_j^{\sum_i y_{ij}}.
 $$
 The MLE is
 $$
@@ -120,7 +120,7 @@ ytable <- xtabs(y ~ particle + quality, data = wafer)
 
 ### Binomial
 
-- If we view `particle` as a predictor affecting whether a wafer is good quality or bad quality, we end up with a binomial model. Equivalently we consider the row sums as fixed.
+- If we view `particle` as a predictor affecting whether a wafer is good quality or bad quality, we end up with an independent binomial model. 
 
 - The null (intercept-only) model corresponds to the hypothesis `particle` does not affect quality.
 ```{r}
@@ -134,14 +134,14 @@ The alternative model corresponds to the full/saturated model where `particle` i
 
 - Again we observe the exactly same analysis of deviance inference. 
 
-- When there are more than rows or columns, this model is called the product binoimal/multinomial model.
+- When there are more than rows or columns, this model is called the **product binoimal/multinomial model**.
 
 ### Hypergeometric
 
-- If we fix both row and column marginal totals, the probability of the observed table is
+- Finally if we fix both row and column marginal totals, the probability of the observed table is
 \begin{eqnarray*}
 p(y_{11}, y_{12}, y_{21}, y_{22}) &=& \frac{\binom{y_{1\cdot}}{y_{11}} \binom{y_{2\cdot}}{y_{22}} \binom{y_{\cdot 1}}{y_{21}} \binom{y_{\cdot 2}}{y_{12}}}{\binom{n}{y_{11} \, y_{12} \, y_{21} \, y_{22}}} \\ 
-&=& \frac{y_{1\cdot} y_{2\cdot} y_{\cdot 1} y_{\cdot 2}}{y_{11}! y_{12}! y_{21}! y_{22}! n!} \\
+&=& \frac{y_{1\cdot}! y_{2\cdot}! y_{\cdot 1}! y_{\cdot 2}!}{y_{11}! y_{12}! y_{21}! y_{22}! n!} \\
 &=& \frac{\binom{y_{1 \cdot}}{y_{11}} \binom{y_{2 \cdot}}{y_{\cdot 1} - y_{11}}}{\binom{n}{y_{\cdot 1}}}.
 \end{eqnarray*}
 
@@ -170,7 +170,7 @@ haireye <- as_tibble(haireye) %>%
 (haireye_table <- xtabs(y ~ hair + eye, data = haireye))
 ```
 
-- Graphical summary of the contingency table by a mosaic plot. If `eye` and `hair` are independent, we expect to see a grid. 
+- Graphical summary of the contingency table by a **mosaic plot**. If `eye` and `hair` are independent, we expect to see a grid. 
 ```{r}
 mosaicplot(haireye_table, color = TRUE, main = NULL, las = 1)
 ```
@@ -189,7 +189,7 @@ summary(haireye_table)
 
 - We follow up by a **correspondence analysis** to study how `eye` and `hair` are dependent. 
 
-    1. We first compute the table of Pearson residuals $\mathbf{R}$.
+    1. We first compute the matrix of Pearson residuals $\mathbf{R}$.
     ```{r}
     (R <- xtabs(residuals(modc, type = "pearson") ~ hair + eye, data = haireye))
     ```
@@ -207,11 +207,12 @@ summary(haireye_table)
     
     3. Finally we plot $\tilde{\mathbf{u}}_2$ against $\tilde{\mathbf{u}}_1$ and $\tilde{\mathbf{v}}_2$ against $\tilde{\mathbf{v}}_1$ on a **correspondence analysis plot**.  
     ```{r}
-    cplot_df <- tibble(dim1  = sqrt(svdr$d[1]) * c(svdr$u[, 1], svdr$v[, 1]),
-           dim2  = sqrt(svdr$d[2]) * c(svdr$u[, 2], svdr$v[, 2]),
-           label = c(rownames(R), colnames(R)),
-           var   = rep(c("hair", "eye"), each = 4),
-           size  = rep(c(2, 1.5), each = 4)) %>%
+    cplot_df <- tibble(
+      dim1  = sqrt(svdr$d[1]) * c(svdr$u[, 1], svdr$v[, 1]),
+      dim2  = sqrt(svdr$d[2]) * c(svdr$u[, 2], svdr$v[, 2]),
+      label = c(rownames(R), colnames(R)),
+      var   = rep(c("hair", "eye"), each = 4),
+      size  = rep(c(2, 1.5), each = 4)) %>%
       print(n = Inf)
     ```
     ```{r}
@@ -234,10 +235,6 @@ summary(haireye_table)
         - Large values of $|\tilde{u}_i|$ or $|\tilde{v}_i|$ indicates that level is a typical. For example, `BLONDE` hair.  
         - If row and column levels appear close together and far from the origin, then there is a strong positive association. For example, `BLONDE` hair + `blue` eye. If they are diametrically apart on either side of the origin, then there is a strong negative association. For example, `BLONDE` hair + `brown` eye.  
         - If two row levels or column levels are close together, it indicates that the two levels have similar pattern of association,. In some cases, one might consider combining the two levels. For example, `hazel` and `green` eyes.
-        
-## Matched pairs
-
-- 
 
 ## Three-way contingency tables
 
@@ -251,16 +248,16 @@ There are three factors `smoker`, `dead`, and `age`. If we just classify over `s
 (ct <- xtabs(y ~ smoker + dead, data = femsmoke))
 prop.table(ct, 1)
 ```
-we see higher percentage of non-smokers died than smokers and it is significant
+we see significantly higher percentage of non-smokers died than smokers.
 ```{r}
 summary(ct)
 ```
 
-- However `smoke` status is confounded with the `age` group.
+- However `smoke` status is confounded with the `age` group. Smokers are more concentrated in the younger groups and younger people are more likely to live for another 20 years.
 ```{r}
 prop.table(xtabs(y ~ smoker + age, data = femsmoke), 2)
 ```
-Smokers are more concentrated in the younger groups and younger people are more likely to live for another 20 years.
+
 
 - The odds ratios in all age groups are:
 ```{r}
@@ -342,10 +339,16 @@ $$
 
 - It leads to a model with with two interaction terms
 ```{r}
-glm(y ~ smoker * age + age * dead, family = poisson, data = femsmoke) %>%
+glm(y ~ smoker * age + dead * age, family = poisson, data = femsmoke) %>%
   summary()
 ```
 This model fits data pretty well.
+
+- Significance of predictors
+```{r}
+glm(y ~ smoker * age + dead * age, family = poisson, data = femsmoke) %>%
+  drop1(test = "Chi")
+```
 
 ### Uniform association
 
@@ -373,17 +376,17 @@ Thus the name uniform association model.
 
 ### Model selection
 
-- We can start from the saturated model and use analysis deviance to see how much we reduce the model.
+- We can start from the saturated model and use analysis deviance to see how much we can reduce the model.
 ```{r}
 glm(y ~ smoker * age * dead, family = poisson, data = femsmoke) %>%
   step(test = "Chi") %>%
   drop1(test = "Chi")
 ```
-The interaction term `smoker:dead` is weakly significant in the final model. This corresponds to the test of conditional independence between smoking and life status given age group. The p-value is very similar to that from the CMH test.
+The interaction term `smoker:dead` is weakly significant in the final model. This corresponds to the test of conditional independence between `smoke` and `dead` given age group. The p-value is very similar to that from the CMH test.
 
 ### Binomial
 
-- It makes intuitive sense to model life status as the outcome depending on perdictors `smoker` and `age`. 
+- It also makes intuitive sense to model life status as the outcome depending on perdictors `smoker` and `age`. 
 
 ```{r}
 # glm(dead ~ smoker * age, family = binomial, weights = y, data = femsmoke) %>%
@@ -394,5 +397,3 @@ glm(matrix(femsmoke$y, ncol = 2) ~ smoker * age, family = binomial, femsmoke[1:1
 ```
 
 - The final model retains only main effects. This is equivalent to the uniform association model. The deviance is exactly the same. 
-
-
