--- a/_posts/2020-04-23-week4-day2.md
+++ b/_posts/2020-04-23-week4-day2.md
@@ -10,6 +10,6 @@ category: biostat200Cspring2020
 
 ## Announcement
 
-* HW2 format? RMarkdown and html will be great.
+* HW2 format? RMarkdown and html is preferred.
 
 
